{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "KeyboardControls",
            "id": "1442e708-2498-44f2-8298-c6874c0530fb",
            "actions": [
                {
                    "name": "Steering",
                    "type": "Value",
                    "id": "f102ca3e-c20c-4cb5-9d57-d541a1261cbf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "14d9372e-adfc-4603-848e-ff9635b89475",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HammerBoost",
                    "type": "Button",
                    "id": "9a924022-1cf3-4a33-9c67-a100ff61a981",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Value",
                    "id": "efd42687-e0ad-4bca-9ab5-7e891af44d90",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "37dd4b6f-93cd-42cd-8f79-3acef0ac026c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2a0c20a8-812b-4ce5-8f85-9ace47526245",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "82bcec66-36f3-47d9-ab03-2e3f7e4cc237",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d4392f3-db56-4110-a691-5f9e4d9caef1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HammerBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "147cc5b1-08d9-4f25-af5e-b8c5358bcba6",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MouseControls",
            "id": "dffcc1cf-31a9-42b1-a26d-89c7cb2103c2",
            "actions": [
                {
                    "name": "SteeringPos",
                    "type": "Value",
                    "id": "4aaeaba3-7e2d-47e4-b822-d4798d317aac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HammerBoost",
                    "type": "Button",
                    "id": "46a916c5-8792-4832-a77c-8958b613f310",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "91c28734-8aad-4fcc-903d-25154c2ac222",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "SteeringPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc486f86-d2d4-4f1d-a462-dc4175a70bc3",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "HammerBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}